Stop compiling unused LocationAlways code
Fixes MOB-946

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,7 +28,7 @@ setup_permissions(
     # 'Contacts',
     # 'FaceID',
     "LocationAccuracy",
-    "LocationAlways",
+    # "LocationAlways",
     "LocationWhenInUse",
     "MediaLibrary",
     "Microphone",
