--- a/.github/workflows/e2e_android_split.yml
+++ b/.github/workflows/e2e_android_split.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: macos-15-intel
 
     steps:
-    - name: Debugging 1
+    - name: Debugging
       run: |
         java --version
         echo $JAVA_HOME
@@ -28,7 +28,7 @@ jobs:
       with:
         fetch-depth: 1
 
-    - name: Debugging 1.5
+    - name: Debugging
       run: |
         echo $GITHUB_WORKSPACE
         ls $GITHUB_WORKSPACE
@@ -91,7 +91,7 @@ jobs:
       run: npm run e2e:build:android
 
 
-    - name: Debugging 1.56
+    - name: Debugging
       run: |
         ls -l
         ls -Rl android/app/build/outputs
@@ -115,12 +115,9 @@ jobs:
     runs-on: macos-15-intel
 
     steps:
-    - name: Debugging 2
+    - name: Debugging
       run: |
-        java --version
-        echo $JAVA_HOME
         ls -l
-        ls -Rl android/app/build/outputs
 
     - name: Download app apk
       uses: actions/download-artifact@v5
@@ -133,11 +130,6 @@ jobs:
       with:
         name: test-apk
         path: android/app/build/outputs/apk/androidTest/release/org.inaturalist.iNaturalistMobile-release-androidTest.apk
-
-    - name: Debugging 2
-      run: |
-        java --version
-        echo $JAVA_HOME
 
     # Use the Android command line tools to download an AOSP emulator image, and setup new avd
     # x86_64 OR arm64-v8a <- intel vs M#
