test uploading dotfile

--- a/.github/workflows/e2e_android_split.yml
+++ b/.github/workflows/e2e_android_split.yml
@@ -21,12 +21,20 @@ jobs:
         java --version
         echo $JAVA_HOME
         echo $GITHUB_WORKSPACE
-        ls $GITHUB_WORKSPACE
+        ls -la $GITHUB_WORKSPACE
 
     - name: Check out Git repository
       uses: actions/checkout@v4
       with:
         fetch-depth: 1
+    # trying to keep things simple for the next step to avoid any red herrings from the repo itself
+    # we _at least_ need the detox config
+    - name: Upload detox config test
+      uses: actions/upload-artifact@v4
+      with:
+        name: detox-config-test
+        include-hidden-files: true
+        path: .detoxrc.js
 
     - name: Debugging
       run: |
