hey so where are you .detoxrc ......

--- a/.github/workflows/e2e_android_split.yml
+++ b/.github/workflows/e2e_android_split.yml
@@ -142,7 +142,7 @@ jobs:
       uses: actions/download-artifact@v5
       with:
         name: detox-config
-        path: detox.config.js
+        path: .detoxrc.js
 
     - name: Debugging
       run: |
@@ -177,6 +177,10 @@ jobs:
         curl -I --fail "https://staging.inaturalist.org/ping"
         # is node running & is ES working?
         curl -I --fail "https://stagingapi.inaturalist.org/v2/taxa"
+
+    - name: Debugging
+      run: |
+        ls -la
 
     # Start the Android e2e tests with extensive logging and screen captures for failing tests
     - name: Android Detox
