try copying (will break, but at least find the file hopefully

--- a/.github/workflows/e2e_android_split.yml
+++ b/.github/workflows/e2e_android_split.yml
@@ -181,6 +181,7 @@ jobs:
     - name: Debugging
       run: |
         ls -la
+        cp .detoxrc.js .detoxrc.json
 
     # Start the Android e2e tests with extensive logging and screen captures for failing tests
     - name: Android Detox
