--- a/.github/workflows/e2e_ios.yml
+++ b/.github/workflows/e2e_ios.yml
@@ -90,11 +90,13 @@ jobs:
         gem update cocoapods xcodeproj
         cd ios && pod install && cd ..
 
-    # We need these files to be present but we don't need any actul secrets, i.e. talking to firebase, for the tests to pass
+    - name: Add secrets to GoogleService-Info.plist
+      env:
+        FIREBASE_STAGING_GOOGLE_APP_ID: ${{ secrets.FIREBASE_STAGING_GOOGLE_APP_ID }}
+      run: sed -i "" "s/your-google-app-id/${FIREBASE_STAGING_GOOGLE_APP_ID//\//\\/}/g" "ios/GoogleService-Info.example.plist"
+
     - name: Create GoogleService-Info.plist files from example
-      run: |
-        cp ios/GoogleService-Info.example.plist ios/GoogleService-Info.staging.plist
-        cp ios/GoogleService-Info.example.plist ios/GoogleService-Info.production.plist
+      run: cp ios/GoogleService-Info.example.plist ios/GoogleService-Info.staging.plist
 
     # Generate the secret files needed for a release build
     - name: Create .env file
