--- a/.github/workflows/e2e_android_split.yml
+++ b/.github/workflows/e2e_android_split.yml
@@ -105,12 +105,12 @@ jobs:
         name: detox-config
         include-hidden-files: true
         path: .detoxrc.js
-    # and the e2e/jest config
-    - name: Upload jest config
+    # and the e2e dir
+    - name: Upload e2e directory
       uses: actions/upload-artifact@v4
       with:
-        name: jest-config
-        path: e2e/jest.config.js
+        name: e2e-directory
+        path: e2ejs
 
   test:
     needs: build
@@ -150,11 +150,10 @@ jobs:
       with:
         name: detox-config
 
-    - name: Download jest config
+    - name: Download e2e directorye
       uses: actions/download-artifact@v5
       with:
-        name: jest-config
-        path: e2e
+        name: e2e-directory
 
     - name: Debugging
       run: |
