--- a/.github/workflows/e2e_android_split.yml
+++ b/.github/workflows/e2e_android_split.yml
@@ -168,7 +168,17 @@ jobs:
     - name: Android Detox
       run: MOCK_MODE=e2e npx detox test --configuration android.release --take-screenshots failing --record-videos failing -l debug
 
+    - name: Emulator logcat
+      run: adb logcat > logcat.txt
+
     # The artifacts for the failing tests are available for download on github.com on the page of the individual actions run
+    - name: Store Detox artifacts on test failure
+      uses: actions/upload-artifact@v4
+      if: failure()
+      with:
+        name: detox-artifacts
+        path: artifacts
+
     - name: Store Detox artifacts on test failure
       uses: actions/upload-artifact@v4
       if: failure()
