--- a/.github/workflows/e2e_ios.yml
+++ b/.github/workflows/e2e_ios.yml
@@ -4,6 +4,10 @@
 name: e2e-iOS
 on:
   workflow_dispatch:
+  pull_request:
+  push:
+    branches:
+      - 'main'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -12,7 +16,7 @@ concurrency:
 jobs:
   checksecret:
     name: check for oauth client
-    runs-on: macos-15 # from https://github.com/actions/runner-images | Paid!(?)
+    runs-on: macos-15-large
     outputs:
       is_SECRETS_PRESENT_set: ${{ steps.checksecret_job.outputs.is_SECRETS_PRESENT_set }}
     steps:
@@ -27,7 +31,7 @@ jobs:
   test:
     needs: checksecret
     if: needs.checksecret.outputs.is_SECRETS_PRESENT_set == 'true'
-    runs-on: macos-15 # from https://github.com/actions/runner-images | Paid!(?)
+    runs-on: macos-15-large
     # Kill the task if not finished after 120 minutes
     timeout-minutes: 120
 
@@ -36,9 +40,6 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 1
-
-    - name: List devices
-      run: xcrun simctl list devices
 
     - name: Install Node.js, NPM and Yarn
       uses: actions/setup-node@v4
@@ -145,7 +146,7 @@ jobs:
     name: Notify Slack
     needs: test
     if: ${{ success() || failure() }}
-    runs-on: macos-15 # from https://github.com/actions/runner-images | Paid!(?)
+    runs-on: macos-15-large
     steps:
       - uses: iRoachie/slack-github-actions@v2.3.0
         if: env.SLACK_WEBHOOK_URL != null
