--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -73,7 +73,9 @@ jobs:
       if: steps.cache.outputs.cache-hit != 'true'
       run: npm install
 
-      # We need these files to be present but we don't need any actul secrets, i.e. talking to firebase, for the tests to pass
+      # We need these files to be present in the correct location for the build to succeed.
+      # TODO: this might potentially break the build if there are no actual keys in the example files
+      # it did so on iOS.
     - name: Create google-services.json files from example
       run: |
         cp android/app/google-services.example.json android/app/src/debug/google-services.json
