--- a/.github/workflows/e2e_android_split.yml
+++ b/.github/workflows/e2e_android_split.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     # using intel image, android emu currently can't run on Apple Silicon
     # https://github.com/ReactiveCircus/android-emulator-runner/issues/350#issuecomment-3349718997
-    runs-on: macos-15-intel
+    runs-on: macos-15-large
 
     steps:
 
@@ -106,7 +106,7 @@ jobs:
     needs: build
     # using intel image, android emu currently can't run on Apple Silicon
     # https://github.com/ReactiveCircus/android-emulator-runner/issues/350#issuecomment-3349718997
-    runs-on: macos-15-intel
+    runs-on: macos-15-large
 
     steps:
 
