Update TypeScript config to ignore Flow autgenerated stubs.
By doing this, TypeScript will now resolve the types of the imports to the actual library, instead of the packaged stubbed to `any`.

Prior to this change `npx tsc` reported 1121 errors. After this change, `npx tsc` reports 797 errors.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
       "styles": ["src/styles"],
       "tests": ["tests"],
     },
-    "types": ["nativewind/types"]
-  }
+    "types": ["nativewind/types"],
+  },
+  "exclude": [
+    "flow-typed"
+  ]
 }
